# termLight

./: .dropboxignore  HEADER_TEMPLATE.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-project.ptp  tsconfig.json  vite.config.ts
.cursor/plans/: ui-skeleton-setup-35251fa9.plan.md
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  serial.rs  system.rs
src-tauri/src/serial/: config.rs  manager.rs  mod.rs  port.rs  state.rs
src/components/CommandPanel/: CommandHeader.tsx  CommandItem.tsx  CommandPanel.tsx
src/components/Common/: Button.tsx  Dropdown.tsx  Icon.tsx  Input.tsx  SplitButton.tsx
src/components/Documentation/: Documentation.tsx
src/components/MainPanel/: CommandInput.tsx  DataDisplay.tsx  FormatSelector.tsx  MainPanel.tsx
src/components/MenuBar/: FileMenu.tsx  HelpMenu.tsx  MenuBar.tsx  RunMenu.tsx
src/components/Modals/: AboutModal.tsx  CommSettingsModal.tsx  (+5 more)
src/hooks/: useCommands.ts  useProject.ts  useProjectOperations.ts  useSerialPort.ts  useSettings.ts  useUpdateCheck.ts
src/services/: commandService.ts  formatService.ts  projectService.ts  serialService.ts  updateService.ts
src/store/: index.ts
src/types/: command.ts  index.ts  project.ts  serial.ts  ui.ts
src/utils/: cobs.ts  constants.ts  crc.ts  formatters.ts  logger.ts  validators.ts
(+10 files in other folders)
