[package]
name = "termlight"
version = "0.1.1"
description = "A serial communication tool for sending, receiving, and managing commands via COM ports"
authors = ["Marc Ledesma"]
license = "GPL-3.0"
repository = "https://github.com/marcledesma/termLight"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.5"
chrono = { version = "0.4.42", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.23.0"



